# ReFactX

./: .dockerignore  .gitattributes  .gitignore  10  2wikimultihop_dev_ssample200.py  2wikimultihop_sample_dev.py  2wikimultihop_test_ssample200.py  LICENSE  MANIFEST.in  PrefixTree.md  Readme-pip.md  Readme.md  RedisCache.py  SimpleCache.py  Textgrad.ipynb  Textgrad.py  Tokenizers.ipynb  WebQSP_base.py  WebQSP_test.py  WebQSP_test_sample200.py  analyze.ipynb  analyze.py  api.py  base_dataset_config.py  base_http_index.py  base_model_config.py  base_postgres_index_config.py  bi_base.py  bi_index.py  bi_test.py  bz2_parallel.py  ctrie.py  ctrie_generate.ipynb  ctrie_generate.py  cwq_base.py  cwq_dev.py  cwq_dev_ssample200.py  debug.ipynb  debug_postgres.py  do_textgrad.py  (+91 more)
datamodules/: WebQSP_test.py  base_dataset_config.py  bi_base.py  twowikimultihop_base.py
datasets/: mintaka_dev.py  mintaka_train_ssample200.py  twowikimultihop_dev.py
hpc_sample/: .gitignore  env_sample.sh  runall.sh  runall_eval.sh  runall_judge.sh  runbatch.sh  runeval.sh  runjudge.sh  throughput.sh
indexes/: base_http_index.py  base_postgres_index_config.py  bi_index.py  bi_index_llama.py  bi_index_phi4.py  bi_index_qwen.py  gemma3_index.py  http_index_llama.py  http_index_phi4.py  llama_index.py  phi4_index.py  qwen25_index.py  simple_index.py  simple_index_llama.py  simple_index_phi4.py  simple_index_qwen.py
models/: dummy_model_config.py  gemma3_1B_model.py  gemma3_4B_model.py  llama_1B_model.py  llama_70B_model.py  llama_8B_model.py  llama_model_config.py  phi3_model.py  phi4_model.py  qwen25_05B_model.py  qwen25_14B_model.py  qwen25_1B_model.py  qwen25_32B_model.py  qwen25_3B_model.py  (+11 more)
(+68 files in other folders)
